work mainly on section 4
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5077 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -166,7 +166,7 @@ Guaranteeing efficient workflow for sound spatialization requires structure, fle
 Currently, many composers and sound designers use DAWs for designing their sound spatialization primarily in the context of fixed media, tape-music, and consumer media production. Users of DAWs often have former experience with live diffusion systems, or with panning in a hardware mixing console. Their migration to DAWs seems reasonable because the linear time representation of sound material and the audio bus architecture in DAWs originates from the use of multitrack tape recorder and mixing consoles.\\ 
 A number of (mainly commercial) DAWs are mature and offer a systematic user interface, good project and sound file management, and extendability through plug-ins so that they can fulfill the needs of many users in the described context.\\
 However, through focusing on consumer media products, multichannel capabilities are limited. ITU 5.1 \cite{ITU:1993_surround_5:1}, a surround sound format with equidistant loudspeakers around an ideal located listener is the most common multichannel format. % in DAWs and in surround panning plugins. 
-Its artistic use may be limited because 5.1 favors the frontal direction and has reduced capabilities for localizing virtual sources from the sides and back.  More recently, extensions up to 10.2 are available\footnote{A comparison of DAWs concerning their multichannel audio capabilities shows \url{http://acousmodules.free.fr/hosts.htm}.}.   
+Its artistic use may be limited because 5.1 favors the frontal direction and has reduced capabilities for localizing virtual sources from the sides and back.  More recently, extensions up to 10.2 are available\footnote{A comparison of DAWs concerning their multichannel audio capabilities shows \scriptsize{\url{http://acousmodules.free.fr/hosts.htm}}.}.   
 Also, in art installations or concert hall environments, non-standard loudspeaker setups are common due to artistic or practical reasons, varying in number and arrangements of loudspeakers.  These configurations are typically unaccounted in DAWs and therefore often difficult to use. 
 %From 1993, emergence of the ITU 5.1 has been announced as a major improvement for mixing surround sound. Originally designed to fulfill the needs of the film industry, this loudspeaker configuration appeared to music and entertainment companies as a new way to extend their commercial offer. Since then, all DAWs surround panners have been designed to respect and organize sound processing for this set-up. It was not until the late nineties that new suggestions for surround workstations (from 6.1 to 10.2, enhancing sides precision, and perception outside of the Central Listening Position) were considered.\\
 %This was an useful approach for recording, multimedia or film prospects (cannot do business without standards), but still in a regular, circular, geometric and (FIXME: non-neutral ?we mean it influences the user) design, which cannot be acceptable and sufficient for creation or live applications. As an example, a non-flexible loudspeaker circle set-up is very rarely adapted to the concert hall.\\ 
@@ -284,29 +284,31 @@ Examples are symbolic authoring tools, generative algorithms, simulations of eme
 
 
 \section{Stratified Tools}
-%- structured according to layers
-In order to concretely experiment these ideas, the authors designed and used the tools described below :
-TODO: maybe the tools should be organized according to the layers - hmmm... yes, but some of them are participating to different layers, e.g. ICST Ambisonics are in 5 and 3... Though, if we do so, maybe the description of the layers should contain the description of the tools used in our experimentations ????
+%- structured according to layers   
+In the following, several developments are discussed which are under development by the authors to establish and evaluate the proposed stratified concept.    
+%In order to concretely experiment these ideas, the authors designed and used the tools described below :
+%TODO: maybe the tools should be organized according to the layers %- hmmm... yes, but some of them are participating to different layers, e.g. ICST Ambisonics are in 5 and 3... Though, if we do so, maybe the description of the layers should contain the description of the tools used in our experimentations ????
 
 
 \subsection{SpatDIF} 
-The goal of the Spatial Sound Description Interchange Format (SpatDIF) is to develop a system-independent language for describing spatial audio scenes \cite{Peters:2008spatdif} to be applied in the Audio Scene Description Layer. 
-Formats that integrate spatial audio descriptors such as MPEG-4 Advanced Audio BIFS or OpenAL did not fully succeed in the music or fine arts community because these formats are primary tailored to multimedia and gaming applications. 
-
-As such they do not necessarily consider the special requirements of spatial music, or performances in concert venues, or sonic/mixed media installations in specific places such as galleries or museums.  Furthermore it is the authors' opinion that artists were not sufficiently involved in the development of these formats.\\
-As can be seen in the layer section (... to be continued ...)
+The goal of the Spatial Sound Description Interchange Format (SpatDIF) is to develop a system-independent language for describing spatial audio \cite{Peters:2008spatdif} that can be applied in the \emph{Scene Description Layer} of Figure \ref{fig:layers}. 
+Formats that integrate spatial audio descriptors such as MPEG-4 Advanced Audio BIFS or OpenAL did not fully succeed in the music or fine arts community because they are primary tailored to multimedia and gaming applications and don't necessarily consider the special requirements of spatial music, performances in concert venues, and site-specific media installations.
+To account for these specific requirements the development of SpatDIF is consequently a collaborative effort that jointly involves researcher and artists. A database\footnote{\scriptsize{\url{http://redmine.spatdif.org/wiki/spatdif/SpatBASE}}} has been created to gather informations about the syntax and functionalities of common spatialization tools. %Furthermore it is the authors' opinion that artists were not sufficiently involved in the development of these formats.\\
+%As can be seen in the layer section (... to be continued ...)
 
  
 \subsection{ICST Ambisonics}
-The ICST ambisonics tools comprise a set of four externals for Max/MSP. The two DSP externals ambiencode$\sim$ and ambidecode$\sim$ generate and decode Higher Order Ambisonics. They reach 3rd order with Furse-Malham Formulas in version 1.2, and 5th order using either the Furse-Malham or Normalized 3D formulas in version 2.0. The two control externals ambimonitor and ambicontrol complete the set. Ambimonitor presents the user with a GUI displaying point sources in an abstract 2D or 3D space, various key commands, snapshot and file I/O capabilities and it generates coordinate information for the DSP objects. Ambicontrol provides a number of methods that control motion of points in the Ambimonitor's dataset. Automated motions such as rotation, random motion, optionally constrained in bounding volumes and user defined trajectories can be applied to single or grouped points. The import/export format for the trajectories and state snapshots is a simple XML text file, which will be replaced by a SpatDIF compliant formatting in a next release. \cite{Schacher:2006ambi_max} At ICST a different panning algorithm \cite{Neukom:2008ambipan} was derived from in-phase ambisonics decoding and also coded as Max/MSP external. Ambipanning$\sim$ implements the Ambisonics Equivalent Panning, which transcodes in one step a set of mono sources onto a ideally circular speaker setup with an arbitrary number of speakers. The algorithm works with a continuous order factor, which permits to apply per point individually varying directivity responses. This external understands the same command syntax and becomes interchangeable with the other ICST Ambisonics DSP objects. 
+The ICST ambisonics tools comprise a set of four externals for Max/MSP \cite{Schacher:2006ambi_max}. The two DSP externals ambiencode$\sim$ and ambidecode$\sim$ generate and decode Higher Order Ambisonics. They reach 3rd order with Furse-Malham Formulas in version 1.2, and 5th order using either the Furse-Malham or Normalized 3D formulas in version 2.0. The two control externals ambimonitor and ambicontrol complete the set. Ambimonitor presents the user with a GUI displaying point sources in an abstract 2D or 3D space, various key commands, snapshot and file I/O capabilities and it generates coordinate information for the DSP objects. Ambicontrol provides a number of methods that control motion of points in the Ambimonitor's dataset. Automated motions such as rotation, random motion, optionally constrained in bounding volumes and user defined trajectories can be applied to single or grouped points. The import/export format for the trajectories and state snapshots is a simple XML text file, which will be replaced by a SpatDIF compliant formatting in a next release. At ICST a different panning algorithm \cite{Neukom:2008ambipan} was derived from in-phase ambisonics decoding and also coded as Max/MSP external. Ambipanning$\sim$ implements the Ambisonics Equivalent Panning, which transcodes in one step a set of mono sources onto a ideally circular speaker setup with an arbitrary number of speakers. The algorithm works with a continuous order factor, which permits to apply per point individually varying directivity responses. This external understands the same command syntax and becomes interchangeable with the other ICST Ambisonics DSP objects. 
 \subsection{Jamoma}
 
 Jamoma\footnote{\url{http://www.jamoma.org}} is a open-source software\cite{Place:2006jamoma} to facilitate artistic and scientific work with Max/MSP. It consists of a DSP library and a modular framework for structuring patches.\\
 Among others, the Jamoma Modular Framework provides a modular set of popular spatialization algorithms, as there were VBAP \cite{Pulkki:2000vbap_max}, ambisonics \cite{Schacher:2006ambi_max}, ViMiC\cite{CMJ08-VIMIC}, and , DBAP \cite{dbapICMC09}. ViMiC and DBAP can be applied to non-conventional and non-standardized loudspeaker arrangements and therefore provides alternative solutions to the limitations outlined in section \ref{sec:digital audio workstations - DAW}. In particularly, DBAP has been proven to be useful in theaters and sound installation context.\\   
 Furthermore, a number of spatial effects modules (Doppler, Airfilter, RollOff, Reverb), as well as multichannel recording \& playback modules, and other utilities to facilitate the work with multichannel audio (loudspeaker setup definition tools including sound-pressure and delay compensation for non-equidistant arrangements, multichannel auxiliaries, level-meters) are provided.
 %that can be combined and substituted with each other to quickly compare, audition, or adapt each of them to a specific context. 
-All these modules have been designed according to a common namespace model, that enables the user to rapidly combine or substituted modules in order to adapt to a specific requierements. In particular, the interoperability with Holo-Edit, ICST Ambimonitor and physical interfaces, such as Lemur\footnote{\url{http://www.jazzmutant.com}} or TUIO-compliant \cite{kaltenbrunner2005tpt} multitouch devices through MMF\footnote{\url{http://code.google.com/p/mmf}} facilitates the individual control to Jamoma's rendering modules.\\
-Current low-level spatial-systems development in Jamoma is focused on Jamoma Multicore\footnote{\url{http://code.google.com/p/jamulticore}}, a coding layer for the creation of dynamic audio graph topologies.  One application of Jamoma Multicore is the creation of ``multichannel signals" that can be passed between objects in Max/MSP or Pure Data. These multichannel signals are also dynamic, meaning that the number of channels can be changed instantaneously. % and the audio graph will adapt accordingly.  
+All these modules have been designed according to a common namespace model, that enables the user to rapidly combine or substituted modules in order to adapt to a specific requierements. In particular, the interoperability with Holo-Edit, ICST Ambimonitor and physical interfaces, such as Jazzmutant's Lemur %\footnote{\url{http://www.jazzmutant.com}} 
+or TUIO-compliant \cite{kaltenbrunner2005tpt} multitouch devices through MMF\footnote{\url{http://code.google.com/p/mmf}} facilitates the individual control to Jamoma's rendering modules.\\
+Current low-level spatial-systems development in Jamoma is focused on Jamoma Multicore %\footnote{\url{http://code.google.com/p/jamulticore}}, 
+, a coding layer for the creation of dynamic audio graph topologies. One application of Jamoma Multicore is the creation of ``multichannel signals" that can be passed between objects in Max/MSP or Pure Data. These multichannel signals are also dynamic, meaning that the number of channels can be changed instantaneously. % and the audio graph will adapt accordingly.  
 The signals can also carry encoded audio signals such as the Ambisonics B-format of any order.
  
 \subsection{Holo-Edit}
